Fixed mouse release on mobile devices

--- a/src/main/webapp/css/app.css
+++ b/src/main/webapp/css/app.css
@@ -3,7 +3,8 @@
 
 body, html {
 	height: 100%;
-    overflow: hidden;
+    position: fixed;
+    overflow-y: hidden;
 	width: 100%;
 	font-family: 'Roboto', sans-serif;
 }
@@ -111,7 +112,7 @@ svg rect{
 /*--------------------- CSS FOR LOADING SCREEN BEGIN -------------------*/
 .loading-screen {
 	text-align: center;
-	background-color: #2c2d31;
+	background-color: white;
 	height: 100%;
 	width: 100%;
 	display: table;
@@ -166,6 +167,7 @@ svg rect{
 	to   { opacity: 1; }
 }
 /*-------------------------- CSS FOR LOADING SCREEN END -------------*/
+
 /*-------------------------- CSS FOR LOADING ICON BEGIN -------------*/
 #loading-wrapper {
 	position: fixed;
@@ -222,8 +224,8 @@ svg rect{
 
 #loading-content {
 	border: 3px solid transparent;
-	border-top-color: white;
-	border-bottom-color: white;
+	border-top-color: #4a89dc;
+	border-bottom-color: #4a89dc;
 	border-radius: 50%;
 	-webkit-animation: loader 2s linear infinite;
 	-moz-animation: loader 2s linear infinite;
@@ -233,8 +235,8 @@ svg rect{
 
 #loading-content:before {
 	border: 3px solid transparent;
-	border-top-color: white;
-	border-bottom-color: white;
+	border-top-color: #4a89dc;
+	border-bottom-color: #4a89dc;
 	border-radius: 50%;
 	-webkit-animation: loader 3s linear infinite;
 	-moz-animation: loader 2s linear infinite;
@@ -335,7 +337,7 @@ svg rect{
 	margin-left: 12px;
 	padding: 0 11px 0 13px;
 	text-overflow: ellipsis;
-	width: 20%;
+	width: 60%;
 }
 
 .pac-input:focus {
@@ -367,7 +369,7 @@ svg rect{
 
 
 
-/*------------------------ Hamburcer START ------------------------------ */
+/*------------------------ Hamburger START ------------------------------ */
 
 #nav-icon3 {
 	width: 60px;
@@ -395,7 +397,7 @@ svg rect{
 	position: absolute;
 	height: 8px;
 	width: 90%;
-	background: #2c2d31;
+	background: #999;
 	border-radius: 3px;
 	opacity: 1;
 	left: 0;
